# deathmatch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/deathmatch/: __init__.py  app.py
src/deathmatch/static/: app.js
src/deathmatch/templates/: index.html
